--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:ATmega328P]
 platform = atmelavr
-board = ATmega328P
+board = uno
 framework = arduino
 lib_deps =
     adafruit/Adafruit SSD1306@^2.5.7
